tests/derivation/core/norec t-p.--.. w_ext 005/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type `a` is not a top-level data definition

DerivedGen:1
 10 | 
 11 | Show a => Show (X a) where
 12 |   show (MkX m) = "MkX \{show m}"
 13 | 
 14 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty a) => Gen MaybeEmpty (X a)
                                    ^^^

